# flashmath

./: .gitignore  CMakeLists.txt  README.md  setup.py
debug/: debug.txt
src/: main.cpp
tests/: test_basic.py
